--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "express": "~3.2.4",
     "socket.io": "~0.9.14",
     "body-parser": "*",
-    "multer": "*"
+    "multer": "*",
+    "request": "*"
   }
 }
