--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "description": "A chat example to showcase how to use `socket.io` with a static `express` server with `async` for control flow.",
   "main": "server.js",
-  "repository": "",
+  "repository": "*",
   "author": "Mostafa Eweda <mo.eweda@gmail.com>",
   "dependencies": {
     "async": "~0.2.8",
@@ -11,6 +11,7 @@
     "socket.io": "~0.9.14",
     "body-parser": "*",
     "multer": "*",
-    "request": "*"
+    "request": "*",
+    "nosql": "*"
   }
 }
